修正編輯文章之按鈕: 	僅限於同個文章之發文者可顯示，並且增加防歐大破解(?)功能 新增顯示錯誤之頁面